Actions
Bug #10833
closedsppptun: cast between incompatible function types
Start date:
2019-04-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/io/ppp/sppptun/sppptun.c:174:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())sppptun_urput, /* qi_putp */ ^ ../../common/io/ppp/sppptun/sppptun.c:184:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())sppptun_uwput, /* qi_putp */ ^ ../../common/io/ppp/sppptun/sppptun.c:194:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())sppptun_lrput, /* qi_putp */ ^ ../../common/io/ppp/sppptun/sppptun.c:204:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())sppptun_lwput, /* qi_putp */ ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 868fcfe93b967e5d10b7c95ef2d015c8900d607d
commit 868fcfe93b967e5d10b7c95ef2d015c8900d607d Author: Toomas Soome <tsoome@me.com> Date: 2019-05-15T07:21:12.000Z 10833 sppptun: cast between incompatible function types Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions